--- a/templates/manage.mustache
+++ b/templates/manage.mustache
@@ -15,7 +15,7 @@
     along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
 }}
 {{!
-    @template format_buttons/manage
+    @template format_mooin4/manage
 
     class="card-columns" 
     class="card shadow-sm p-3 mb-5 bg-white rounded"
@@ -28,7 +28,7 @@
 <div class="card-columns outer_card">
 {{#cards}}
 
-    <div class="card shadow-sm p-3 mb-5 bg-white rounded inner_card" onclick="location.href='{{title_url}}'" id="buttons">
+    <div class="card shadow-sm p-3 mb-5 bg-white rounded inner_card" onclick="location.href='{{title_url}}'" id="mooin4">
         <div class="card-body">
             <h3 class="card-title font-weight-bolder title_card">
                 <a  class="text-decoration-none" style="color:rgb(128, 128, 128);">
