--- a/templates/mobile_course.mustache
+++ b/templates/mobile_course.mustache
@@ -15,12 +15,12 @@
     along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
 }}
 {{!
-    @template format_buttons/mobile_course
+    @template format_mooin4/mobile_course
 
 }}
-<core-dynamic-component [component]="allSectionsComponent" [data]="data" class="format-buttons"> 
+<core-dynamic-component [component]="allSectionsComponent" [data]="data" class="format-mooin4"> 
     {{!
-        class="format-buttons"
+        class="format-mooin4"
     }}
     <ng-container *ngFor="let section of sections">
         <ion-item-divider color="light">
