--- a/templates/manage_inhalt.mustache
+++ b/templates/manage_inhalt.mustache
@@ -35,56 +35,72 @@
 {{#blokinhalt}}
 <div class="card shadow-sm p-3 mb-5 bg-white inner_card" style="cursor: default">
     <div class="card-body">
-      
-      <h2 class="card-title " style="color: grey; font-weight: 500;">{{sectionid}}. {{chapter_title}}</h2>
+      <div class="d-flex justify-content-between">
+        <h2 class="card-title " style="color: grey; font-weight: 500;">{{sectionid}}. {{chapter_title}}</h2>
+        
+      </div>
      <div class=" container" style="max-width: 100% !important;">
         <div class="row d-flex justify-content-between" style="color: grey;">
           {{#sectionData}}
-              <div class="col-2" role="group" aria-label="Basic example">
-                <button class="btn btn-secondary">
+              <div class="col-2" role="group" aria-label="Basic example" style="margin-top: 12px;">
+                <button class="course-id{{courseid}} chapter-id{{chapterid}} section-id{{sectionid}} section_move btn btn-secondary">
                   <i class="fa fa fa-arrows"></i>
                 </button>
-                <button class="btn btn-light">
+                <button class="course-id{{courseid}} chapter-id{{chapterid}} section-id{{sectionid}} section_edit sectionEdit{{chapterid}}{{sectionid}} btn btn-light" style="display: inline-block;" id="sectiontoedit ">
                   <i class="fa fa fa-pencil"></i>
                 </button>
-                <button class="btn btn-danger">
+                <button class="course-id{{courseid}} chapter-id{{chapterid}} section-id{{sectionid}}  section_save sectionSave{{chapterid}}{{sectionid}} btn btn-light" style="display: none;" id="saveeditsection">
+                  <i class="fa fa fa-save"></i>
+                </button>
+                <button class="course-id{{courseid}} chapter-id{{chapterid}} section-id{{sectionid}} section-url{{sectionurl}} section_delete btn btn-danger">
                   <i class="fa fa fa-trash"></i>
                 </button>
               </div>
-            <div class="col-2 section-id" >{{chapterid}}. {{sectionid}} </div>
-            <div class="col-6 section-text">
-              <input type="button" readonly class=" form-control-plaintext" id="staticSectionTitle" value= '{{sectiontext}}' style="cursor: pointer;"  onclick="location.href='{{sectionurl}}'">
-            </div>
-           
-           <div class="form-check col-2 section-done">
-                 <input class="form-check-input position-static" type="checkbox" id="blankCheckbox" value="{{sectiondone}}" aria-label="..." style="float: right;">
-           </div>
+              <input type="hidden" class="id_section{{chapterid}}{{sectionid}}" id="id_section" name="id_section" value="{{id}}">
+              <input type="hidden" class="url_section{{chapterid}}{{sectionid}}" id="url_section" name="url_section" value="{{sectionurl}}">
+              <div class="col-2 section-id" >{{chapterid}}. {{sectionid}} </div>
+              <div class="col-6 section-text">
+                  <input type="text" readonly class="course-id{{courseid}} chapter-id{{chapterid}} section-id{{sectionid}} editsection section{{courseid}}{{chapterid}}{{sectionid}} form-control-plaintext" id="staticSectionTitle" value= '{{sectiontext}}' style="cursor: pointer; border: none; outline: none;" onclick="location.href='{{sectionurl}}'" >
+              </div>
+              <div class="form-check col-1">
+                    <input class="form-check-input position-static section-done{{chapterid}}{{sectionid}}" type="checkbox" id="blankCheckbox" value="{{sectiondone}}" aria-label="..." style="float: right;">
+              </div>
+              <div class="col-1">
+                <div class="custom-control custom-switch">
+                  <input type="checkbox" class="custom-control-input" id="customSwitch1">
+                  <label class="custom-control-label" for="customSwitch1"></label>
+                </div>
+              </div>
            {{/sectionData}}
         </div>
         <br />
         <br />
      </div>
         <div class="d-flex justify-content-between">
-          
+          <input type="hidden" class="id_chapter{{sectionid}}" id="id_chapter" name="id_chapter" value="{{id}}">
+          <input type="hidden" class="id_course{{sectionid}}" id="id_course" name="id_course" value="{{courseid}}">
+          <input type="hidden" class="chapter_title{{sectionid}}" id="chapter_title" name="chapter_title" value="{{chapter_title}}">
+          <input type="hidden" class="chapter_sectionnumber{{sectionid}}" id="chapter_sectionnumber" name="chapter_sectionnumber" value="{{sectionnumber}}">
           <div class="btn-group" role="group">
             <button class="btn btn-secondary"><span class="fa-stack">
               <i class="fa fa-circle-thin fa-stack-2x"></i>
               <i class="fa fa fa-arrows fa-stack-1x"></i>
             </span></i>Move Chapter</button>
             
-            <button class="btn btn-light"><span class="fa-stack">
+            <button class="btn btn-light" onclick="location.href='{{editurl}}&chapterid={{sectionid}}'"><span class="fa-stack">
               <i class="fa fa-circle-thin fa-stack-2x"></i>
               <i class="fa fa fa-pencil fa-stack-1x"></i>
-            </span></i>Update Chapter</button>
-            <button class="btn btn-danger"><span class="fa-stack">
+            </span></i>Rename Chapter</button>
+            
+            <button class="btn btn-danger chapter{{sectionid}} chapter_delete "><span class="fa-stack">
               <i class="fa fa-circle-thin fa-stack-2x"></i>
               <i class="fa fa fa-trash fa-stack-1x"></i>
-            </span></i> Deleted Chapter</button>
+            </span></i> Delete Chapter</button>
           </div>
-            <button class="btn btn-light"><span class="fa-stack">
+            <button class="btn btn-light chapter{{sectionid}} chapteraddsection"><span class="fa-stack">
             <i class="fa fa-circle-thin fa-stack-2x"></i>
             <i class="fa fa fa-plus fa-stack-1x"></i>
-            </span></i>Add new Section</button>
+            </span></i>Add new Lesson</button>
             
         </div>
     </div>
@@ -96,7 +112,7 @@
 <br />
 
 {{#blokinhalt}}
-<div class="card shadow-sm p-3 mb-5 bg-white inner_card" style="cursor: default">
+<div class="card shadow-sm p-3 mb-5 bg-white inner_card" style="cursor: default; max-width: 90%; margin: auto; box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;; border-radius: 12px; border: 0px !important">
     <div class="card-body">
       
       <h2 class="card-title " style="color: grey; font-weight: 500;">{{sectionid}}. {{chapter_title}}</h2>
@@ -106,7 +122,7 @@
               
             <div class="col-2 section-id" >{{chapterid}}. {{sectionid}} </div>
             <div class="col-8 section-text">
-              <input type="button" readonly class=" form-control-plaintext" id="staticSectionTitle" value= '{{sectiontext}}' style="cursor: pointer;"  onclick="location.href='{{sectionurl}}'">
+              <input type="text" readonly class=" form-control-plaintext" id="staticSectionTitle" value= '{{sectiontext}}' style="cursor: pointer; outline: none;"  onclick="location.href='{{sectionurl}}'">
             </div>
            
            <div class="form-check col-2 section-done">
@@ -114,8 +130,6 @@
            </div>
            {{/sectionData}}
         </div>
-        <br />
-        <br />
      </div>
     </div>
   </div>
